# klippy

./: .gitignore  CHANGELOG.md  Pipfile  README.md  cli.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.devcontainer/: Dockerfile  compose.yaml  cship.toml  devcontainer.json  postCreate.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: lint.yml  linter.yml  test.yml
app/: clipboard.py  config.py
src/klippy/: cli.py  clipboard.py  config.py
tests/: test_cli.py  test_clipboard.py  test_config.py  test_version.py
tests/app/: test_clipboard.py  test_config.py  test_version.py
tests/klippy/: test_clipboard.py  test_config.py  test_version.py
