[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "klippy"
description = "A command line utility that acts like a cloud clipboard."
readme = "README.md"
authors = [{ name = "Khurram Raza", email = "ikhurramraza@gmail.com" }]
license = "MIT"
license-files = ["LICENSE"]
keywords = ["cloud", "clipboard"]
requires-python = ">=3.14"
dependencies = [
    "click",
    "redis",
]
dynamic = ["version"]

[dependency-groups]
dev = [
    "black==26.5.1",
    "fakeredis",
    "pytest",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/ikhurramraza/klippy"

[project.scripts]
klippy = "klippy.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "klippy.version.VERSION" }

[tool.black]
line-length = 100
target-version = ["py314"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["B", "C90", "E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.mccabe]
max-complexity = 18

[tool.pytest.ini_options]
testpaths = ["tests"]
